deploy: f79541c5d9429f99bc70a6bc87038b7128e0b8a7

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 15 Jan. 2023 -->
+<!-- 19 Jan. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My homepage with org-mode</title>
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org0946cf1">
+<figure id="orgb8924e6">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-orgf638675" class="outline-2">
-<h2 id="orgf638675">Introduction</h2>
-<div class="outline-text-2" id="text-orgf638675">
+<section id="outline-container-orgb8f0450" class="outline-2">
+<h2 id="orgb8f0450">Introduction</h2>
+<div class="outline-text-2" id="text-orgb8f0450">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orgc1f2d81" class="outline-2">
-<h2 id="orgc1f2d81">Implementation</h2>
-<div class="outline-text-2" id="text-orgc1f2d81">
+<section id="outline-container-org1fad4c3" class="outline-2">
+<h2 id="org1fad4c3">Implementation</h2>
+<div class="outline-text-2" id="text-org1fad4c3">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org3215490" class="outline-2">
-<h2 id="org3215490">Usage</h2>
-<div class="outline-text-2" id="text-org3215490">
+<section id="outline-container-org50b005c" class="outline-2">
+<h2 id="org50b005c">Usage</h2>
+<div class="outline-text-2" id="text-org50b005c">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="orga7c999d">
+<pre class="example" id="org5075d8d">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-orgae0d276" class="outline-3">
-<h3 id="orgae0d276">RSS Feeds</h3>
-<div class="outline-text-3" id="text-orgae0d276">
+<div id="outline-container-org596c02a" class="outline-3">
+<h3 id="org596c02a">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org596c02a">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-org1f688ad" class="outline-2">
-<h2 id="org1f688ad">Features</h2>
-<div class="outline-text-2" id="text-org1f688ad">
+<section id="outline-container-org63a63a2" class="outline-2">
+<h2 id="org63a63a2">Features</h2>
+<div class="outline-text-2" id="text-org63a63a2">
 </div>
-<div id="outline-container-orgdf30953" class="outline-4">
-<h4 id="orgdf30953">Redirection</h4>
-<div class="outline-text-4" id="text-orgdf30953">
+<div id="outline-container-org040ac91" class="outline-4">
+<h4 id="org040ac91">Redirection</h4>
+<div class="outline-text-4" id="text-org040ac91">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orgb6f5c13" class="outline-3">
-<h3 id="orgb6f5c13">Drafts</h3>
-<div class="outline-text-3" id="text-orgb6f5c13">
+<div id="outline-container-orgbaae0fc" class="outline-3">
+<h3 id="orgbaae0fc">Drafts</h3>
+<div class="outline-text-3" id="text-orgbaae0fc">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orgce729c9" class="outline-2">
-<h2 id="orgce729c9">License</h2>
-<div class="outline-text-2" id="text-orgce729c9">
+<section id="outline-container-orgac21eb3" class="outline-2">
+<h2 id="orgac21eb3">License</h2>
+<div class="outline-text-2" id="text-orgac21eb3">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
@@ -208,7 +208,7 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 15 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 19 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
