--- a/setup.html
+++ b/setup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 15 Jan. 2023 -->
+<!-- 19 Jan. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My personal setup</title>
@@ -49,9 +49,9 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-orgac78997" class="outline-2">
-<h2 id="orgac78997">General setup</h2>
-<div class="outline-text-2" id="text-orgac78997">
+<section id="outline-container-org9a52654" class="outline-2">
+<h2 id="org9a52654">General setup</h2>
+<div class="outline-text-2" id="text-org9a52654">
 <p>
 I like Thinkpads. Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 </p>
@@ -101,9 +101,9 @@ I also have a small Home &ldquo;Lab&rdquo;
 </div>
 </section>
 
-<section id="outline-container-orgae41128" class="outline-2">
-<h2 id="orgae41128">Work</h2>
-<div class="outline-text-2" id="text-orgae41128">
+<section id="outline-container-orgac345df" class="outline-2">
+<h2 id="orgac345df">Work</h2>
+<div class="outline-text-2" id="text-orgac345df">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -120,9 +120,9 @@ This setup is kept in an internal dotfiles repository.
 </p>
 </div>
 
-<div id="outline-container-orgc1218fb" class="outline-4">
-<h4 id="orgc1218fb">Other</h4>
-<div class="outline-text-4" id="text-orgc1218fb">
+<div id="outline-container-orgfbd37f5" class="outline-4">
+<h4 id="orgfbd37f5">Other</h4>
+<div class="outline-text-4" id="text-orgfbd37f5">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
 <li><a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
@@ -131,9 +131,9 @@ This setup is kept in an internal dotfiles repository.
 </div>
 </section>
 
-<section id="outline-container-orgc40b650" class="outline-2">
-<h2 id="orgc40b650">Development environment</h2>
-<div class="outline-text-2" id="text-orgc40b650">
+<section id="outline-container-org513be91" class="outline-2">
+<h2 id="org513be91">Development environment</h2>
+<div class="outline-text-2" id="text-org513be91">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
@@ -146,27 +146,27 @@ This setup is kept in an internal dotfiles repository.
 </ul>
 </div>
 
-<div id="outline-container-org58c94f0" class="outline-4">
-<h4 id="org58c94f0">C++</h4>
-<div class="outline-text-4" id="text-org58c94f0">
+<div id="outline-container-org29fadb3" class="outline-4">
+<h4 id="org29fadb3">C++</h4>
+<div class="outline-text-4" id="text-org29fadb3">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org138e148" class="outline-4">
-<h4 id="org138e148">Ruby</h4>
-<div class="outline-text-4" id="text-org138e148">
+<div id="outline-container-org6d0cba9" class="outline-4">
+<h4 id="org6d0cba9">Ruby</h4>
+<div class="outline-text-4" id="text-org6d0cba9">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org77e55c0" class="outline-4">
-<h4 id="org77e55c0">Golang</h4>
-<div class="outline-text-4" id="text-org77e55c0">
+<div id="outline-container-org2b1c7f9" class="outline-4">
+<h4 id="org2b1c7f9">Golang</h4>
+<div class="outline-text-4" id="text-org2b1c7f9">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
@@ -178,7 +178,7 @@ This setup is kept in an internal dotfiles repository.
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 15 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 19 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
