--- a/README.html
+++ b/README.html
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="orgb8924e6">
+<figure id="orgf1b508d">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-orgb8f0450" class="outline-2">
-<h2 id="orgb8f0450">Introduction</h2>
-<div class="outline-text-2" id="text-orgb8f0450">
+<section id="outline-container-orgaa0efe6" class="outline-2">
+<h2 id="orgaa0efe6">Introduction</h2>
+<div class="outline-text-2" id="text-orgaa0efe6">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org1fad4c3" class="outline-2">
-<h2 id="org1fad4c3">Implementation</h2>
-<div class="outline-text-2" id="text-org1fad4c3">
+<section id="outline-container-org58c729f" class="outline-2">
+<h2 id="org58c729f">Implementation</h2>
+<div class="outline-text-2" id="text-org58c729f">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org50b005c" class="outline-2">
-<h2 id="org50b005c">Usage</h2>
-<div class="outline-text-2" id="text-org50b005c">
+<section id="outline-container-org920027e" class="outline-2">
+<h2 id="org920027e">Usage</h2>
+<div class="outline-text-2" id="text-org920027e">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org5075d8d">
+<pre class="example" id="orgfc63943">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org596c02a" class="outline-3">
-<h3 id="org596c02a">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org596c02a">
+<div id="outline-container-org7ed469b" class="outline-3">
+<h3 id="org7ed469b">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org7ed469b">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-org63a63a2" class="outline-2">
-<h2 id="org63a63a2">Features</h2>
-<div class="outline-text-2" id="text-org63a63a2">
+<section id="outline-container-org07647f8" class="outline-2">
+<h2 id="org07647f8">Features</h2>
+<div class="outline-text-2" id="text-org07647f8">
 </div>
-<div id="outline-container-org040ac91" class="outline-4">
-<h4 id="org040ac91">Redirection</h4>
-<div class="outline-text-4" id="text-org040ac91">
+<div id="outline-container-org47c6dcd" class="outline-4">
+<h4 id="org47c6dcd">Redirection</h4>
+<div class="outline-text-4" id="text-org47c6dcd">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orgbaae0fc" class="outline-3">
-<h3 id="orgbaae0fc">Drafts</h3>
-<div class="outline-text-3" id="text-orgbaae0fc">
+<div id="outline-container-org893553e" class="outline-3">
+<h3 id="org893553e">Drafts</h3>
+<div class="outline-text-3" id="text-org893553e">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orgac21eb3" class="outline-2">
-<h2 id="orgac21eb3">License</h2>
-<div class="outline-text-2" id="text-orgac21eb3">
+<section id="outline-container-org42e7645" class="outline-2">
+<h2 id="org42e7645">License</h2>
+<div class="outline-text-2" id="text-org42e7645">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
