deploy: 6cdde0b96666a5ecfd5bbc64413398cb47891198

--- a/setup.html
+++ b/setup.html
@@ -49,9 +49,9 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-orgc8dd194" class="outline-2">
-<h2 id="orgc8dd194">General setup</h2>
-<div class="outline-text-2" id="text-orgc8dd194">
+<section id="outline-container-org96ab180" class="outline-2">
+<h2 id="org96ab180">General setup</h2>
+<div class="outline-text-2" id="text-org96ab180">
 <p>
 I like Thinkpads. Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 </p>
@@ -101,9 +101,9 @@ I also have a small Home &ldquo;Lab&rdquo;
 </div>
 </section>
 
-<section id="outline-container-org38b96b0" class="outline-2">
-<h2 id="org38b96b0">Work</h2>
-<div class="outline-text-2" id="text-org38b96b0">
+<section id="outline-container-org1f1e016" class="outline-2">
+<h2 id="org1f1e016">Work</h2>
+<div class="outline-text-2" id="text-org1f1e016">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -120,9 +120,9 @@ This setup is kept in an internal dotfiles repository.
 </p>
 </div>
 
-<div id="outline-container-org1854747" class="outline-4">
-<h4 id="org1854747">Other</h4>
-<div class="outline-text-4" id="text-org1854747">
+<div id="outline-container-org16c0492" class="outline-4">
+<h4 id="org16c0492">Other</h4>
+<div class="outline-text-4" id="text-org16c0492">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
 <li><a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
@@ -131,9 +131,9 @@ This setup is kept in an internal dotfiles repository.
 </div>
 </section>
 
-<section id="outline-container-org5c3fe14" class="outline-2">
-<h2 id="org5c3fe14">Development environment</h2>
-<div class="outline-text-2" id="text-org5c3fe14">
+<section id="outline-container-org18d72a6" class="outline-2">
+<h2 id="org18d72a6">Development environment</h2>
+<div class="outline-text-2" id="text-org18d72a6">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
@@ -146,27 +146,27 @@ This setup is kept in an internal dotfiles repository.
 </ul>
 </div>
 
-<div id="outline-container-org6aa1584" class="outline-4">
-<h4 id="org6aa1584">C++</h4>
-<div class="outline-text-4" id="text-org6aa1584">
+<div id="outline-container-orgcdf2cc9" class="outline-4">
+<h4 id="orgcdf2cc9">C++</h4>
+<div class="outline-text-4" id="text-orgcdf2cc9">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org944f027" class="outline-4">
-<h4 id="org944f027">Ruby</h4>
-<div class="outline-text-4" id="text-org944f027">
+<div id="outline-container-org2b42f34" class="outline-4">
+<h4 id="org2b42f34">Ruby</h4>
+<div class="outline-text-4" id="text-org2b42f34">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org289c150" class="outline-4">
-<h4 id="org289c150">Golang</h4>
-<div class="outline-text-4" id="text-org289c150">
+<div id="outline-container-org1f9df3d" class="outline-4">
+<h4 id="org1f9df3d">Golang</h4>
+<div class="outline-text-4" id="text-org1f9df3d">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
