deploy: 3fe791d5b2be8d0ffacf4ee4f8a2a426cb48c8b1

--- a/README.html
+++ b/README.html
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org4fdd758">
+<figure id="org016406b">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-org3b31d00" class="outline-2">
-<h2 id="org3b31d00">Introduction</h2>
-<div class="outline-text-2" id="text-org3b31d00">
+<section id="outline-container-orge44145e" class="outline-2">
+<h2 id="orge44145e">Introduction</h2>
+<div class="outline-text-2" id="text-orge44145e">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org4be8f0f" class="outline-2">
-<h2 id="org4be8f0f">Implementation</h2>
-<div class="outline-text-2" id="text-org4be8f0f">
+<section id="outline-container-org7273632" class="outline-2">
+<h2 id="org7273632">Implementation</h2>
+<div class="outline-text-2" id="text-org7273632">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org1a4dc18" class="outline-2">
-<h2 id="org1a4dc18">Usage</h2>
-<div class="outline-text-2" id="text-org1a4dc18">
+<section id="outline-container-orge8639af" class="outline-2">
+<h2 id="orge8639af">Usage</h2>
+<div class="outline-text-2" id="text-orge8639af">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="orgc23da51">
+<pre class="example" id="orgcf7a6c4">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org3416491" class="outline-3">
-<h3 id="org3416491">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org3416491">
+<div id="outline-container-org753dd84" class="outline-3">
+<h3 id="org753dd84">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org753dd84">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-orgb3721da" class="outline-2">
-<h2 id="orgb3721da">Features</h2>
-<div class="outline-text-2" id="text-orgb3721da">
+<section id="outline-container-orgd9961ff" class="outline-2">
+<h2 id="orgd9961ff">Features</h2>
+<div class="outline-text-2" id="text-orgd9961ff">
 </div>
-<div id="outline-container-orgb31fd17" class="outline-4">
-<h4 id="orgb31fd17">Redirection</h4>
-<div class="outline-text-4" id="text-orgb31fd17">
+<div id="outline-container-org2182dfd" class="outline-4">
+<h4 id="org2182dfd">Redirection</h4>
+<div class="outline-text-4" id="text-org2182dfd">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orge290fdb" class="outline-3">
-<h3 id="orge290fdb">Drafts</h3>
-<div class="outline-text-3" id="text-orge290fdb">
+<div id="outline-container-orgf19a37d" class="outline-3">
+<h3 id="orgf19a37d">Drafts</h3>
+<div class="outline-text-3" id="text-orgf19a37d">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-org0ae26a2" class="outline-2">
-<h2 id="org0ae26a2">License</h2>
-<div class="outline-text-2" id="text-org0ae26a2">
+<section id="outline-container-orgef201da" class="outline-2">
+<h2 id="orgef201da">License</h2>
+<div class="outline-text-2" id="text-orgef201da">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
