--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 <h1 class="title">Duncan Mac-Vicar P.</h1>
 </header>
 
-<section id="outline-container-org6a81211" class="outline-2 post-list">
-<h2 id="org6a81211"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
-<div class="outline-text-2" id="text-org6a81211">
+<section id="outline-container-org5c65052" class="outline-2 post-list">
+<h2 id="org5c65052"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
+<div class="outline-text-2" id="text-org5c65052">
 <ul class="org-ul">
+<li><span class="timestamp-wrapper"><span class="timestamp">19 Jan 2023</span></span>  <a href="posts/2023-01-19-personal-picks/index.html">2022 picks: software projects to keep an eye on</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">20 Oct 2020</span></span>  <a href="posts/2020-10-20-migrating-away-google-services/index.html">Migrating away from Google services</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">14 Sep 2020</span></span>  <a href="posts/2020-09-14-prose-linting-vale-emacs.org/index.html">Prose linting with Vale and Emacs</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">07 Sep 2020</span></span>  <a href="posts/2020-09-07-k3s-on-rpi-with-salt/index.html">Raspberry Pi cluster with k3s &amp; Salt (Part 1)</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">03 Sep 2019</span></span>  <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">Migrating from Jekyll to org-mode and Github Actions</a></li>
-<li><span class="timestamp-wrapper"><span class="timestamp">11 Jul 2016</span></span>  <a href="posts/2016-07-11-building-docker-images-with-plain-salt/index.html">Building Docker images with plain Salt</a></li>
 </ul>
 
 <p>
@@ -70,9 +70,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-orgaf34d92" class="outline-2 post-list">
-<h2 id="orgaf34d92"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
-<div class="outline-text-2" id="text-orgaf34d92">
+<section id="outline-container-org8a4473e" class="outline-2 post-list">
+<h2 id="org8a4473e"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
+<div class="outline-text-2" id="text-org8a4473e">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">27 Feb 2016</span></span> an attempt to write a <a href="https://github.com/dmacvicar/terraform-provider-libvirt">libvirt provider</a> for <a href="https://terraform.io">Terraform</a>.</li>
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Jan 2016</span></span> As part of my work, I had the chance to start contributing to <a href="https://github.com/saltstack/salt">Salt</a>.</li>
@@ -91,9 +91,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org3299b28" class="outline-2 post-list">
-<h2 id="org3299b28"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
-<div class="outline-text-2" id="text-org3299b28">
+<section id="outline-container-orgb587d52" class="outline-2 post-list">
+<h2 id="orgb587d52"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
+<div class="outline-text-2" id="text-orgb587d52">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Mar 2017</span></span> <a href="tutorials/rpm-packaging/index.html">Full overview of RPM based packaging.</a></li>
 </ul>
